# rustad

./: .gitignore  Cargo.toml  readme.md  typos.toml
examples/: add.rs  add_op.rs  atom.rs  atom_src.rs  binary_op.rs  checkpoint.rs  cmp_as.rs  coloring.rs  compare.rs  f_binary.rs  f_const.rs  f_unary.rs  f_value.rs  float_core.rs  hessian.rs  num_cmp.rs  num_vec_src.rs  rust_src.rs  sparse_jac.rs  zero_one.rs
examples/atom/: for_atom.rs  forward_one.rs  forward_zero.rs  main.rs  rev_atom.rs  reverse_one.rs  tests.rs
examples/atom_ad/: for_atom.rs  forward_der.rs  forward_fun.rs  forward_one.rs  forward_zero.rs  main.rs  rev_atom.rs  reverse_der.rs  tests.rs
src/: ad.rs  ad_fun.rs  ad_tape.rs  add_op.rs  ag.rs  atom.rs  az_float.rs  azfloat.rs  checkpoint.rs  dll_lib.rs  float_value.rs  function.rs  gad.rs  gas.rs  hash.rs  lib.rs  nearly_eq.rs  num_vec.rs  numvec.rs  op_index.rs  operator_id.rs  operators.rs  ptrait.rs  record.rs  setup.rs  simple_float.rs  sparse.rs  tape.rs  test.rs  utility.rs  vec_set.rs
src/ad/: binary.rs  cmp_as.rs  compare.rs  f_binary.rs  f_const.rs  f_unary.rs  float_core.rs  mod.rs  num_cmp.rs  zero_one.rs
src/adfn/: eval_from.rs  eval_from_f32.rs  for_sparse_jac.rs  for_sparsity.rs  forward_der.rs  forward_dyp.rs  forward_one.rs  forward_var.rs  forward_zero.rs  mod.rs  optimize.rs  rev_sparse_jac.rs  reverse_der.rs  reverse_one.rs  rust_src.rs  sub_sparsity.rs  subgraph_der.rs
src/float/: az_float.rs  cmp_as.rs  core.rs  mod.rs  num_cmp.rs  num_vec.rs  traits.rs  value.rs
src/function/: forward.rs  mod.rs  sparsity.rs  subgraph.rs  sweep.rs
src/numvec/: ad.rs  adfn.rs  atom.rs  mod.rs  setup.rs  tape.rs
src/op/: add.rs  binary.rs  call.rs  cmp_as.rs  compare.rs  (+14 more)
tests/: add.rs  add_op.rs  ag.rs  atan2.rs  atom_dyp.rs  atom_dyp_src.rs  atom_opt.rs  atom_sparse.rs  az_float.rs  checkpoint.rs  compound.rs  compress.rs  div_op.rs  f_unary.rs  hypot.rs  mul_op.rs  numvec_compound.rs  op_info.rs  optimize.rs  pow.rs  powf.rs  powi.rs  record.rs  rust_src.rs  sub_op.rs  unary.rs  version.rs  year_month_day.rs  zero_one.rs
(+63 files in other folders)
