# SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
# SPDX-FileCopyrightText: Bradley M. Bell <bradbell@seanet.com>
# SPDX-FileContributor: 2025 Bradley M. Bell

[package]
name = "rustad"
version = "0.0.0"
edition = "2024"

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
